kube/traefik/traefik-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - --configfile=/config/static.yaml
          volumeMounts:
            - name: static-config
              mountPath: "/config"
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
      volumes:
        - name: static-config
          configMap:
            name: traefik-static-config
