kube/traefik/traefik-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`dashboard.192.168.1.52.nip.io`)
      middlewares:
        - name: basic-auth
      services:
        - name: api@internal
          kind: TraefikService

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-metrics
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Path(`/traefik/metrics`)
      services:
        - name: prometheus@internal
          kind: TraefikService
